[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "office-wifi-scanner"
version = "0.1.0"
description = "Office WiFi/LAN network scanner — authorized IT/security reconnaissance"
requires-python = ">=3.10"
authors = [{ name = "SamuelKhawsigan" }]
dependencies = [
    "scapy>=2.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
wifi-scanner  = "wifi_scanner.main:main"
wifi-scan-web = "wifi_scanner.web.server:main"

[tool.setuptools.packages.find]
include = ["wifi_scanner*"]

[tool.setuptools.package-data]
wifi_scanner = ["data/*.json", "web/*.html"]
